local-test-utils/samples/echo.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: echo
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: a
  name: a
  namespace: echo
spec:
  ports:
  - name: http
    port: 80
    targetPort: 18080
  - name: grpc
    port: 7070
    targetPort: 17070
  - name: http2
    port: 85
    targetPort: 18085
  - name: tcp
    port: 9090
    targetPort: 19090
  - name: https
    port: 443
    targetPort: 18443
  - name: tcp-server
    port: 9091
    targetPort: 16060
  - name: auto-tcp
    port: 9092
    targetPort: 19091
  - name: auto-tcp-server
    port: 9093
    targetPort: 16061
  - name: auto-http
    port: 81
    targetPort: 18081
  - name: auto-grpc
    port: 7071
    targetPort: 17071
  - name: auto-https
    port: 9443
    targetPort: 19443
  - name: http-instance
    port: 82
    targetPort: 18082
  - name: http-localhost
    port: 84
    targetPort: 18084
  selector:
    app: a
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: a-v1
  namespace: echo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: a
      version: v1
  template:
    metadata:
      annotations:
        prometheus.io/port: "15014"
        prometheus.io/scrape: "true"
      labels:
        app: a
        test.istio.io/class: standard
        version: v1
    spec:
      containers:
      - args:
        - --metrics=15014
        - --cluster=fake
        - --port=18080
        - --grpc=17070
        - --port=18085
        - --tcp=19090
        - --port=18443
        - --tls=18443
        - --tcp=16060
        - --server-first=16060
        - --tcp=19091
        - --tcp=16061
        - --server-first=16061
        - --port=18081
        - --grpc=17071
        - --port=19443
        - --tls=19443
        - --port=18082
        - --bind-ip=18082
        - --port=18084
        - --bind-localhost=18084
        - --tcp=19092
        - --port=18083
        - --port=8080
        - --port=3333
        - --version=v1
        - --istio-version=
        - --crt=/cert.crt
        - --key=/cert.key
        image: localhost:5000/app:ambient-localdev
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 10
          initialDelaySeconds: 10
          periodSeconds: 10
          tcpSocket:
            port: tcp-health-port
        name: app
        ports:
        - containerPort: 18080
        - containerPort: 17070
        - containerPort: 18085
        - containerPort: 19090
        - containerPort: 18443
        - containerPort: 16060
        - containerPort: 19091
        - containerPort: 16061
        - containerPort: 18081
        - containerPort: 17071
        - containerPort: 19443
        - containerPort: 18082
        - containerPort: 18084
        - containerPort: 19092
        - containerPort: 18083
        - containerPort: 8080
        - containerPort: 3333
          name: tcp-health-port
        readinessProbe:
          failureThreshold: 10
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 1
          periodSeconds: 2
        securityContext:
          runAsGroup: 1338
          runAsUser: 1338
        startupProbe:
          failureThreshold: 10
          periodSeconds: 1
          tcpSocket:
            port: tcp-health-port
      serviceAccountName: a
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: b
  name: b
  namespace: echo
spec:
  ports:
  - name: http
    port: 80
    targetPort: 18080
  - name: grpc
    port: 7070
    targetPort: 17070
  - name: http2
    port: 85
    targetPort: 18085
  - name: tcp
    port: 9090
    targetPort: 19090
  - name: https
    port: 443
    targetPort: 18443
  - name: tcp-server
    port: 9091
    targetPort: 16060
  - name: auto-tcp
    port: 9092
    targetPort: 19091
  - name: auto-tcp-server
    port: 9093
    targetPort: 16061
  - name: auto-http
    port: 81
    targetPort: 18081
  - name: auto-grpc
    port: 7071
    targetPort: 17071
  - name: auto-https
    port: 9443
    targetPort: 19443
  - name: http-instance
    port: 82
    targetPort: 18082
  - name: http-localhost
    port: 84
    targetPort: 18084
  selector:
    app: b
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: b-v1
  namespace: echo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: b
      version: v1
  template:
    metadata:
      annotations:
        prometheus.io/port: "15014"
        prometheus.io/scrape: "true"
      labels:
        app: b
        test.istio.io/class: standard
        version: v1
    spec:
      containers:
      - args:
        - --metrics=15014
        - --cluster=fake
        - --port=18080
        - --grpc=17070
        - --port=18085
        - --tcp=19090
        - --port=18443
        - --tls=18443
        - --tcp=16060
        - --server-first=16060
        - --tcp=19091
        - --tcp=16061
        - --server-first=16061
        - --port=18081
        - --grpc=17071
        - --port=19443
        - --tls=19443
        - --port=18082
        - --bind-ip=18082
        - --port=18084
        - --bind-localhost=18084
        - --tcp=19092
        - --port=18083
        - --port=8080
        - --port=3333
        - --version=v1
        - --istio-version=
        - --crt=/cert.crt
        - --key=/cert.key
        image: localhost:5000/app:ambient-localdev
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 10
          initialDelaySeconds: 10
          periodSeconds: 10
          tcpSocket:
            port: tcp-health-port
        name: app
        ports:
        - containerPort: 18080
        - containerPort: 17070
        - containerPort: 18085
        - containerPort: 19090
        - containerPort: 18443
        - containerPort: 16060
        - containerPort: 19091
        - containerPort: 16061
        - containerPort: 18081
        - containerPort: 17071
        - containerPort: 19443
        - containerPort: 18082
        - containerPort: 18084
        - containerPort: 19092
        - containerPort: 18083
        - containerPort: 8080
        - containerPort: 3333
          name: tcp-health-port
        readinessProbe:
          failureThreshold: 10
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 1
          periodSeconds: 2
        securityContext:
          runAsGroup: 1338
          runAsUser: 1338
        startupProbe:
          failureThreshold: 10
          periodSeconds: 1
          tcpSocket:
            port: tcp-health-port
      serviceAccountName: b
