local-test-utils/samples/sleep.yaml
apiVersion: v1
kind: Service
metadata:
  name: sleep
  labels:
    app: sleep
    service: sleep
spec:
  ports:
  - port: 80
    name: http
  selector:
    app: sleep
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sleep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sleep
  template:
    metadata:
      labels:
        app: sleep
    spec:
      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: version
                    operator: In
                    values:
                      - v2
              topologyKey: kubernetes.io/hostname
      terminationGracePeriodSeconds: 0
      serviceAccountName: sleep
      containers:
      - name: sleep
        image: curlimages/curl
        command: ["/bin/sleep", "3650d"]
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - mountPath: /etc/sleep/tls
          name: secret-volume
      volumes:
      - name: secret-volume
        secret:
          secretName: sleep-secret
          optional: true
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sleep2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sleep2
  template:
    metadata:
      labels:
        app: sleep2
        ambient-type: none
    spec:
      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: version
                    operator: NotIn
                    values:
                      - v2
              topologyKey: kubernetes.io/hostname
      terminationGracePeriodSeconds: 0
      serviceAccountName: sleep
      containers:
      - name: sleep
        image: curlimages/curl
        command: ["/bin/sleep", "3650d"]
        imagePullPolicy: IfNotPresent
---
# This has a bunch of tools to help out debugging connection issues
apiVersion: apps/v1
kind: Deployment
metadata:
  name: swiss-army-knife
spec:
  replicas: 1
  selector:
    matchLabels:
      app: swiss-army-knife
  template:
    metadata:
      labels:
        app: swiss-army-knife
    spec:
      serviceAccountName: sleep
      containers:
      - name: swiss-army-knife
        image: leodotcloud/swiss-army-knife
        imagePullPolicy: Always
